# ztc

./: .gitignore  LICENSE  NOTES.md  PLAN.md  PLAN_MULTI_TERMINAL.md  PLAN_TEMAS_UNIFICADO_V2.md  PLAN_ZSM_AS_SUBPACKAGE.md  README.md  THEME_DERIVATION_PROPOSAL.md  pyproject.toml
doc/: C64_SHOWCASE.md  NOTES.md  PLAN.md  PLAN_CONSOLIDATE_ZELLIJ_THEMES.md  PLAN_FILE_PICKER.md  PLAN_KITTY_IMPORT.md  PLAN_KITTY_PARITY.md  PLAN_LAUNCHER_REFACTOR.md  PLAN_MULTI_TERMINAL.md  PLAN_PANE_DEFAULT_BG.md  PLAN_PROFILE_MIXIN.md  PLAN_TERMINAL_PROFILES.md  PLAN_TERMINAL_SETTINGS.md  PLAN_TUI_FROM_ALACRITTY.md  PLAN_ZSM_INTEGRATION.md  ROADMAP.md
doc/screenshots/: ztc-demo.tape
src/term_config_tui/: __main__.py  app.py
src/term_config_tui/models/: config.py  layout.py  session.py  theme.py
src/term_config_tui/screens/: color_editor.py  custom_theme_editor.py  layout_editor.py  layout_list.py  main_menu.py  session_manager.py  theme_editor.py
src/term_config_tui/services/: alacritty.py  atomic.py  backups.py  colors.py  kdl_io.py  layout_ops.py  runtime_detect.py  theme_sync.py  toml_io.py  zellij_config.py  zellij_session.py  zellij_theme_assets.py  zellij_themes.py
src/term_config_tui/services/terminals/: __init__.py  alacritty.py  kitty.py  registry.py
src/term_config_tui/widgets/: confirm.py
src/ztc/: __init__.py  __main__.py  app.py  startup_checks.py
src/ztc/models/: layout.py
src/ztc/screens/: color_editor.py  custom_theme_editor.py  layout_editor.py  layout_list.py  profile_editing.py  terminal_settings.py  theme_editor.py
src/ztc/services/: backups.py  colors.py  fonts.py  kdl_io.py  layout_ops.py  profile_io.py  save_helper.py  theme_sync.py  toml_io.py  zellij_config.py  zellij_themes.py
src/ztc/sessions/: __init__.py  __main__.py  app.py  launcher.py  types.py
src/ztc/widgets/: color_picker.py  confirm.py  header.py  pane_tree.py  preview.py
src/ztc/zellij/: __init__.py  config.py  config_ops.py  layout_io.py  layout_ops.py  theme_assets.py  theme_writer.py  user_themes.py
tests/: test_alacritty_service.py  test_alacritty_toml.py  test_app.py  test_app_menu_gating.py  test_backups.py  test_color_editor_screen.py  test_custom_theme_editor_screen.py  test_fonts.py  test_fonts_service.py  test_layout_editor_screen.py  test_layout_io.py  test_layout_ops.py  test_profile_io.py  test_runtime_detect.py  test_save_helper.py  test_session_manager_screen.py  test_smoke.py  test_startup_checks.py  test_terminal_alacritty.py  test_terminal_alacritty_settings.py  test_terminal_kitty.py  test_terminal_kitty_settings.py  test_terminal_settings_screen.py  test_theme_picker_screen.py  test_theme_sync.py  test_widgets_confirm.py  test_zellij_config.py  test_zellij_session.py  test_zellij_setup_check.py  test_zellij_theme_assets.py  test_zellij_themes.py  test_zellij_themes_crud.py
tests/fixtures/alacritty/: alacritty_min.toml  dracula.toml
tests/fixtures/kitty/: kitty.conf
tests/fixtures/zellij/: config_no_theme.kdl  config_with_theme.kdl  config_with_user_themes.kdl  layout_simple.kdl
tests/sessions/: test_attached_clients.py  test_launcher.py  test_layouts.py  test_picker_screen.py  test_session_info.py  test_session_parser.py  test_state.py
tests/zellij/: test_basic.py
(+12 files in other folders)
