[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztc"
version = "0.1.0"
description = "ztc — Zellij & Terminal Config: TUI para administrar colores de Alacritty/Kitty y temas/layouts de Zellij."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "martin" }]
dependencies = [
    "textual>=0.80",
    "tomlkit>=0.13",
    "kdl-py>=1.2",
]

[project.scripts]
ztc = "ztc.__main__:main"
zsm = "ztc.sessions.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "textual-dev>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ztc"]

[tool.hatch.build.targets.wheel.force-include]
"src/ztc/zellij/assets/zellij_themes" = "ztc/zellij/assets/zellij_themes"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
