[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ztc-tui"
version = "1.1.0"
description = "ZTC — Zellij & Terminal Config: TUI for managing Alacritty/Kitty colors and settings, plus Zellij themes, layouts and sessions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "WA Developers SRL" },
    { name = "Martin Wasmosy" },
]
dependencies = [
    "textual>=0.80",
    "tomlkit>=0.13",
    "kdl-py>=1.2",
]

[project.urls]
Homepage = "https://wadevelopers.com"
Repository = "https://github.com/wadevelopers/ztc"
Issues = "https://github.com/wadevelopers/ztc/issues"

[project.scripts]
ztc = "ztc.__main__:main"
zsm = "ztc.sessions.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
    "textual-dev>=1.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ztc"]

[tool.hatch.build.targets.wheel.force-include]
"src/ztc/zellij/assets/zellij_themes" = "ztc/zellij/assets/zellij_themes"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
